tests/parser/syntax-errors/comparisons-are-not-associative/comparison_ops_nonassoc_and_le_eq.choc
# RUN: choco-opt "%s" | filecheck "%s"

1 and 2 < 3 == 3

# CHECK:      SyntaxError (line 3, column 13): Comparison operators are not associative.
# CHECK-NEXT: >>>1 and 2 < 3 == 3
# CHECK-NEXT: >>>------------^
